[gd_scene load_steps=9 format=3 uid="uid://unvxioa0yyk1"]

[ext_resource type="Script" path="res://planets/saturn/saturn.gd" id="1_1f5vk"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_38etp"]
[ext_resource type="PackedScene" uid="uid://oweomtxd7uvm" path="res://enemy/green_critter.tscn" id="3_ewirs"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="3_tpbgs"]
[ext_resource type="Texture2D" uid="uid://dpttmph86baid" path="res://pics/player/rocket.png" id="4_4ks05"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sl4o1"]
radius = 73.03

[sub_resource type="CircleShape2D" id="CircleShape2D_0k1k8"]
radius = 42.0119

[sub_resource type="CircleShape2D" id="CircleShape2D_47im6"]
radius = 14.0357

[node name="saturn" type="Node2D"]
script = ExtResource("1_1f5vk")
player = ExtResource("2_38etp")
green_critter = ExtResource("3_ewirs")
metadata/_edit_horizontal_guides_ = [0.0]
metadata/_edit_vertical_guides_ = [1365.0]

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(268, 386)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_sl4o1")

[node name="rocket_upper" type="Sprite2D" parent="spawn_player/takeoff"]
z_index = 5
position = Vector2(0, -169)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4ks05")
region_enabled = true
region_rect = Rect2(0, 0, 640, 440)

[node name="rocket_lower" type="Sprite2D" parent="spawn_player/takeoff"]
position = Vector2(0, -9)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4ks05")
region_enabled = true
region_rect = Rect2(0, 440, 640, 200)

[node name="StaticBody2D" type="StaticBody2D" parent="spawn_player"]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(0, -49)
shape = SubResource("CircleShape2D_0k1k8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(49, -39)
shape = SubResource("CircleShape2D_47im6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="spawn_player/StaticBody2D"]
position = Vector2(-49, -39)
shape = SubResource("CircleShape2D_47im6")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(5120, 5120)

[node name="bg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
self_modulate = Color(1, 0.760784, 0.0117647, 1)
texture_filter = 1
texture_repeat = 2
scale = Vector2(4, 4)
texture = ExtResource("3_tpbgs")
centered = false

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
